<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_app_portfolio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.debojeet.myappportfolio.AppPortfolio"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:text="@string/app_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/ButtonTheme"
        android:text="@string/first_project"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="@dimen/main_activity_horizontal_margin" />

    <Button
        style="@style/ButtonTheme"
        android:text="@string/second_project"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:id="@+id/button2" />

    <Button
        style="@style/ButtonTheme"
        android:text="@string/third_project"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        style="@style/ButtonTheme"
        android:text="@string/fourth_project"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        style="@style/ButtonTheme"
        android:text="@string/fifth_project"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        style="@style/ButtonTheme"
        android:background="@color/capstoneButtonColor"
        android:text="@string/capstone_project"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button5" />

</RelativeLayout>
